--- a/test.ipynb
+++ b/test.ipynb
@@ -2,46 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (2.1.4)\n",
-      "Requirement already satisfied: numpy<2,>=1.23.2 in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (from pandas) (1.24.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/a0d075l/anaconda3/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
